--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-nat.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-nat.cfg
@@ -64,13 +64,17 @@ interface Management1
 ip nat pool prefix_16 prefix-length 16
    range 10.0.0.1 10.0.255.254
    range 10.1.0.0 10.1.255.255 1024 65535
-   utilization threshold 1 action log
-ip nat pool prefix_32 prefix-length 32
-   range 10.2.0.1 10.2.0.1
+   utilization threshold 91 action log
+ip nat pool prefix_21 prefix-length 21
 ip nat pool prefix_24 prefix-length 24
-   range 10.3.0.1 10.3.0.254
-   range 10.3.1.0 10.3.1.255 1024 65535
    utilization threshold 100 action log
+ip nat pool prefix_32 prefix-length 32
+   range 10.2.0.1 10.2.0.1 1024 65535
+   range 10.2.0.2 10.2.0.3
+ip nat pool port_only_1 port-only
+ip nat pool port_only_2 port-only
+   port range 10 15
+   port range 1024 65535
 ip nat synchronization
    description test sync config
    expiry-interval 60
