Feat(eos_cli_config_gen): Add capability to disable address-only for connectivity monitors (#3867)
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -6783,6 +6783,19 @@ keys:
                 '
       local_interfaces:
         type: str
+      address_only:
+        type: bool
+        description: 'PREVIEW: This key is in preview.
+
+          When address-only is configured, the source IP of the packet is set to the
+          interface
+
+          IP but the packet may exit the device via a different interface.
+
+          When set to `false`, the probe uses the interface to exit the device.
+
+          Not supported yet in EOS.'
+        default: true
       hosts:
         type: list
         items:
@@ -6797,6 +6810,19 @@ keys:
               type: str
             local_interfaces:
               type: str
+            address_only:
+              type: bool
+              description: 'PREVIEW: This key is in preview.
+
+                When address-only is configured, the source IP of the packet is set
+                to the interface
+
+                IP but the packet may exit the device via a different interface.
+
+                When set to `false`, the probe uses the interface to exit the device.
+
+                Not supported yet in EOS.'
+              default: true
             url:
               type: str
       vrfs:
@@ -6823,6 +6849,19 @@ keys:
                     type: str
             local_interfaces:
               type: str
+            address_only:
+              type: bool
+              description: 'PREVIEW: This key is in preview.
+
+                When address-only is configured, the source IP of the packet is set
+                to the interface
+
+                IP but the packet may exit the device via a different interface.
+
+                When set to `false`, the probe uses the interface to exit the device.
+
+                Not supported yet in EOS.'
+              default: true
             hosts:
               type: list
               items:
@@ -6837,6 +6876,20 @@ keys:
                     type: str
                   local_interfaces:
                     type: str
+                  address_only:
+                    type: bool
+                    description: 'PREVIEW: This key is in preview.
+
+                      When address-only is configured, the source IP of the packet
+                      is set to the interface
+
+                      IP but the packet may exit the device via a different interface.
+
+                      When set to `false`, the probe uses the interface to exit the
+                      device.
+
+                      Not supported yet in EOS.'
+                    default: true
                   url:
                     type: str
   monitor_layer1:
