--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/vlan_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/vlan_interfaces.schema.yml
@@ -212,6 +212,30 @@ keys:
           type: bool
         ipv6_nd_managed_config_flag:
           type: bool
+        ipv6_nd_other_config_flag:
+          type: bool
+          description: Set the "other stateful configuration" flag in IPv6 router advertisements.
+        ipv6_nd_cache:
+          type: dict
+          description: IPv6 neighbor cache options.
+          keys:
+            dynamic_capacity:
+              type: int
+              description: Capacity of dynamic cache entries.
+              convert_types:
+                - str
+              min: 0
+              max: 4294967295
+            expire:
+              type: int
+              description: Cache entries expirery in seconds.
+              convert_types:
+                - str
+              min: 1
+              max: 65535
+            refresh_always:
+              type: bool
+              description: Force refresh on cache expiry.
         ipv6_nd_prefixes:
           type: list
           convert_types:
