Adding interval unit key and updating template for the same

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis-new.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis-new.yml
@@ -8,6 +8,7 @@ router_isis:
   mpls_ldp_sync_default: true
   spf_interval:
     interval: 250
+    interval_unit: seconds
     wait_interval: 10
     hold_interval: 20
   graceful_restart:
