--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis.yml
@@ -16,6 +16,11 @@ router_isis:
     maximum_paths: 2
   segment_routing_mpls:
     enabled: true
+  # Testing spf_interval without unit
+  spf_interval:
+    interval: 250
+    wait_interval: 10
+    hold_interval: 20
   authentication:
     both:
       key_type: 0
