--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/logging.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/logging.yml
@@ -16,7 +16,13 @@ logging:
       source_interface: Management0
       hosts:
         - name: 10.10.10.7
+        - name: 2001:db8::10:7
         - name: 30.30.30.7
+          protocol: tcp
+          ports:
+            - 100
+            - 200
+        - name: 2001:db8::30:7
           protocol: tcp
           ports:
             - 100
@@ -25,20 +31,37 @@ logging:
           ports:
             - 300
             - 400
+        - name: 2001:db8::40:7
+          ports:
+            - 300
+            - 400
     - name: vrf_with_no_source_interface
       hosts:
         - name: 1.2.3.4
+          protocol: udp
+        - name: 2001:db8::1:2:3:4
           protocol: udp
     - name: default
       source_interface: Loopback0
       hosts:
         - name: 20.20.20.7
+        - name: 2001:db8::20:7
         - name: 50.50.50.7
           protocol: tcp
           ports:
             - 100
             - 200
+        - name: 2001:db8::50:7
+          protocol: tcp
+          ports:
+            - 100
+            - 200
         - name: 60.60.60.7
+          protocol: udp
+          ports:
+            - 100
+            - 200
+        - name: 2001:db8::60:7
           protocol: udp
           ports:
             - 100
