--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/DC1-BL1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/DC1-BL1A.yml
@@ -25,7 +25,8 @@ event_handlers:
     action: FastCli -p 15 -c "clear bgp evpn host-flap"
     delay: 300
     trigger: on-logging
-    regex: EVPN-3-BLACKLISTED_DUPLICATE_MAC
+    trigger_on_logging:
+      regex: EVPN-3-BLACKLISTED_DUPLICATE_MAC
     asynchronous: true
 
 # Testing with inline jinja - targeting base.py loaded in eos_designs_structured_config.
