--- a/.github/workflows/pull-request-comment.yml
+++ b/.github/workflows/pull-request-comment.yml
@@ -1,4 +1,4 @@
-name: "Pull Request Triage"
+name: "Pull Request Comment"
 
 on:
   pull_request:
@@ -14,13 +14,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v7
+        env:
+          COMMENT: |
         with:
-          script: >-
-            github.rest.issues.createComment({
-              issue_number: context.pull_request.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body:
+          script: |
+            const comment = '' +
               'Review docs on [Read the Docs](https://ansible-avd--' + context.pull_request.number + '.org.readthedocs.build/en/' + context.pull_request.number + '/)\n\n' +
               'To test this pull request:\n\n' +
               '```sh\n' +
@@ -36,4 +34,10 @@ jobs:
               'cd test-avd-pr' + context.pull_request.number + '\n' +
               'ansible-playbook arista.avd.install_examples\n' +
               '```\n'
+
+            github.rest.issues.createComment({
+              issue_number: context.pull_request.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: comment
             })
