--- a/.github/workflows/pull-request-comment.yml
+++ b/.github/workflows/pull-request-comment.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/github-script@v7
         env:
           BODY: |
-            Review docs on [Read the Docs](https://ansible-avd--' + pull_request.number + '.org.readthedocs.build/en/' + pull_request.number + '/)
+            Review docs on [Read the Docs](https://ansible-avd--${{ github.event.pull_request.number }}.org.readthedocs.build/en/${{ github.event.pull_request.number }}/)
 
             To test this pull request:
 
