--- a/python-avd/pyproject.toml
+++ b/python-avd/pyproject.toml
@@ -28,7 +28,7 @@ requires = [
     "setuptools>=66.1",
     "wheel",
     "jinja2>=3.0",
-    "jsonschema==4.5.1",
+    "jsonschema>=4.10.3",
     "referencing>=0.35.0",
     "deepmerge>=1.1.0",
     "md-toc>=8.1.8",
