--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -204,17 +204,18 @@ jobs:
           - 'example-single-dc-l3ls'
         ansible_version:
           - 'ansible-core<2.17.0 --upgrade'
+        pip_requirements: 'ansible_collections/arista/avd/requirements.txt'
         # Also test minimum ansible version for one scenario.
         include:
           - avd_scenario: 'eos_designs_unit_tests'
             ansible_version: 'ansible-core==2.14.0'
-            pip_requirements: ansible_collections/arista/avd/requirements-minimum.txt
+            pip_requirements: 'ansible_collections/arista/avd/requirements-minimum.txt'
           - avd_scenario: 'eos_designs_unit_tests'
             ansible_version: 'ansible-core>=2.14.0,<2.15.0 --upgrade'
-            pip_requirements: ansible_collections/arista/avd/requirements.txt
+            pip_requirements: 'ansible_collections/arista/avd/requirements.txt'
           - avd_scenario: 'eos_designs_unit_tests'
             ansible_version: 'ansible-core>=2.15.0,<2.16.0 --upgrade'
-            pip_requirements: ansible_collections/arista/avd/requirements.txt
+            pip_requirements: 'ansible_collections/arista/avd/requirements.txt'
     needs: [ file-changes ]
     if: needs.file-changes.outputs.eos_design == 'true' || needs.file-changes.outputs.config_gen == 'true'
     steps:
