--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -204,7 +204,8 @@ jobs:
           - 'example-single-dc-l3ls'
         ansible_version:
           - 'ansible-core<2.17.0 --upgrade'
-        pip_requirements: 'ansible_collections/arista/avd/requirements.txt'
+        pip_requirements:
+          - 'ansible_collections/arista/avd/requirements.txt'
         # Also test minimum ansible version for one scenario.
         include:
           - avd_scenario: 'eos_designs_unit_tests'
