--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -1702,7 +1702,7 @@ keys:
               source:
                 type: str
                 description: 'This field supports substitution of the fields "interface_ip"
-                  and "peer_ip".
+                  for SVIs and both "interface_ip" and "peer_ip" for Layer 3 interfaces.
 
                   Alternatively it can be set with a static value of "any", "<ip>/<mask>"
                   or "<ip>".
@@ -1713,7 +1713,7 @@ keys:
               destination:
                 type: str
                 description: 'This field supports substitution of the fields "interface_ip"
-                  and "peer_ip".
+                  for SVIs and both "interface_ip" and "peer_ip" for Layer 3 interfaces.
 
                   Alternatively it can be set with a static value of "any", "<ip>/<mask>"
                   or "<ip>".
@@ -8796,7 +8796,8 @@ $defs:
           description: 'Name of the IPv4 access-list to be assigned in the ingress
             direction.
 
-            The access-list must be defined under `ipv4_acls`.
+            The access-list must be defined under `ipv4_acls` and supports field substitution
+            for "interface_ip" and "peer_ip".
 
             Required for all WAN interfaces (`wan_carrier` is set) unless the carrier
             is marked as ''trusted'' under `wan_carriers`.'
@@ -8807,7 +8808,8 @@ $defs:
           description: 'Name of the IPv4 Access-list to be assigned in the egress
             direction.
 
-            The access-list must be defined under `ipv4_acls`.'
+            The access-list must be defined under `ipv4_acls` and supports field substitution
+            for "interface_ip" and "peer_ip".'
           type: str
           convert_types:
           - int
@@ -9199,6 +9201,22 @@ $defs:
         items:
           type: str
           description: IPv6_address.
+      ipv4_acl_in:
+        description: 'Name of the IPv4 access-list to be assigned in the ingress direction.
+
+          The access-list must be defined under `ipv4_acls` and supports substitution
+          of the field "interface_ip".'
+        type: str
+        convert_types:
+        - int
+      ipv4_acl_out:
+        description: 'Name of the IPv4 Access-list to be assigned in the egress direction.
+
+          The access-list must be defined under `ipv4_acls` and supports substitution
+          of the field "interface_ip".'
+        type: str
+        convert_types:
+        - int
       ip_helpers:
         type: list
         primary_key: ip_helper
