--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SVC3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SVC3B.cfg
@@ -594,6 +594,8 @@ interface Vlan110
    description Tenant_A_OP_Zone_1
    no shutdown
    vrf Tenant_A_OP_Zone
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Vlan110 in
+   ip access-group TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Vlan110 out
    ip address virtual 10.1.10.1/24
 !
 interface Vlan111
@@ -801,6 +803,13 @@ interface Vxlan1
 ip virtual-router mac-address 00:dc:00:00:00:0a
 !
 ip address virtual source-nat vrf Tenant_A_OP_Zone address 10.255.1.13
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Vlan110
+   15 deny ip any host 10.1.10.1
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Vlan110
+   remark Some remark will not require source and destination fields.
+   permit ip host 10.1.10.1 any
 !
 ip routing
 no ip routing vrf MGMT
