--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/evpn_services_l2_only_false.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/evpn_services_l2_only_false.yml
@@ -568,6 +568,21 @@ vlans:
 - id: 413
   name: Tenant_D_v6_OP_Zone_3
   tenant: Tenant_D
+ip_access_lists:
+- name: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Vlan110
+  entries:
+  - sequence: 15
+    action: deny
+    protocol: ip
+    source: any
+    destination: 10.1.10.1
+- name: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Vlan110
+  entries:
+  - remark: Some remark will not require source and destination fields.
+  - action: permit
+    protocol: ip
+    source: 10.1.10.1
+    destination: any
 ip_igmp_snooping:
   globally_enabled: true
   vlans:
@@ -622,6 +637,8 @@ vlan_interfaces:
   - opzone
   description: Tenant_A_OP_Zone_1
   shutdown: false
+  access_group_in: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Vlan110
+  access_group_out: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Vlan110
   ip_address_virtual: 10.1.10.1/24
   vrf: Tenant_A_OP_Zone
 - name: Vlan111
