--- a/.github/workflows/pull-request-comment.yml
+++ b/.github/workflows/pull-request-comment.yml
@@ -1,7 +1,7 @@
 name: "Pull Request Comment"
 
 on:
-  pull_request:
+  pull_request_target:
     types:
       - opened
       - synchronize
@@ -13,9 +13,9 @@ jobs:
 
   comment:
     runs-on: ubuntu-latest
-    permissions: write-all
-      # issues: write
-      # pull-requests: write
+    permissions:
+      issues: write
+      pull-requests: write
       
     steps:
       - uses: actions/github-script@v7
