--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
@@ -379,6 +379,7 @@ ip_security:
       interval: 10
       time: 60
       action: clear
+    connection: start
   key_controller:
     profile: DP-PROFILE
 management_security:
@@ -775,6 +776,7 @@ monitor_connectivity:
     local_interfaces: SET-Tunnel102
     address_only: false
     url: http://gateway.zscalerbeta.net/vpntest
+  shutdown: false
 metadata:
   cv_pathfinder:
     internet_exit_policies:
