--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
@@ -368,6 +368,7 @@ ip_security:
       interval: 10
       time: 60
       action: clear
+    connection: start
   - name: IE-ZSCALER-EXIT-POLICY-2-PROFILE
     ike_policy: IE-ZSCALER-EXIT-POLICY-2-IKE-POLICY
     sa_policy: IE-ZSCALER-EXIT-POLICY-2-SA-POLICY
@@ -376,6 +377,7 @@ ip_security:
       interval: 10
       time: 60
       action: clear
+    connection: start
   key_controller:
     profile: DP-PROFILE
 management_security:
@@ -820,6 +822,7 @@ monitor_connectivity:
     local_interfaces: SET-Tunnel112
     address_only: false
     url: http://gateway.zscalerbeta.net/vpntest
+  shutdown: false
 metadata:
   cv_pathfinder:
     internet_exit_policies:
