--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
@@ -828,8 +828,8 @@ metadata:
     internet_exit_policies:
     - name: ZSCALER-EXIT-POLICY-1
       type: zscaler
-      city: BigCity
-      country: BigCountry
+      city: Santa Clara, CA
+      country: United States
       firewall: false
       ips_control: false
       acceptable_use_policy: false
@@ -846,8 +846,8 @@ metadata:
         preference: Alternate
     - name: ZSCALER-EXIT-POLICY-2
       type: zscaler
-      city: BigCity
-      country: BigCountry
+      city: Santa Clara, CA
+      country: United States
       firewall: false
       ips_control: false
       acceptable_use_policy: false
