--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/mlag_ibgp_peering_vrfs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/mlag_ibgp_peering_vrfs.schema.yml
@@ -8,7 +8,7 @@ type: dict
 keys:
   mlag_ibgp_peering_vrfs:
     documentation_options:
-      table: overlay-settings
+      table: network-services-vrfs-settings
     type: dict
     description: |
       On mlag leafs, an SVI interface is defined per vrf, to establish iBGP peering (required when there are MLAG leafs in topology).
