--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-layer1-enabled.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-layer1-enabled.cfg
@@ -3,6 +3,7 @@
 transceiver qsfp default-mode 4x10G
 !
 monitor layer1
+   logging transceiver
    logging mac fault
 !
 hostname monitor-layer1-enabled
