--- a/ansible_collections/arista/avd/requirements-dev.txt
+++ b/ansible_collections/arista/avd/requirements-dev.txt
@@ -17,7 +17,7 @@ treelib>=1.5.5
 md-toc>=8.1.0
 natsort
 jsonschema>=4.10.3
-referencing>=0.35.
+referencing>=0.35.0
 deepmerge>=1.1.0
 isort==5.13.2
 black==24.4.2
