--- a/ansible_collections/arista/avd/requirements-dev.txt
+++ b/ansible_collections/arista/avd/requirements-dev.txt
@@ -3,12 +3,13 @@ ansible-lint>=6.21.0,<24.5.0
 codespell>=2.2.6
 pycodestyle
 flake8
-pylint>=2.16.1
+# Hitting various pylint bugs for 'possibly-used-before-assignment' introduced in 3.2.0
+pylint>=2.16.1,<3.2.0
 twine
 pre-commit>=3.2.0
 pre-commit-hooks>=3.3.0
 identify>=1.4.20
-docker
+docker>=7.1.0
 molecule>=6.0
 molecule-plugins[docker]>=23.4.0
 yamllint
