--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dhcp_servers.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dhcp_servers.schema.yml
@@ -26,19 +26,19 @@ keys:
         dns_servers_ipv4:
           type: list
           min_length: 1
-          description: List of DNS server for IPv4 clients
+          description: List of DNS servers for IPv4 clients.
           items:
             type: str
             required: true
-            description: 'IPv4 address for DNS server'
+            description: IPv4 address of DNS server.
         dns_servers_ipv6:
           type: list
           min_length: 1
-          description: List of DNS server for IPv6 clients
+          description: List of DNS servers for IPv6 clients.
           items:
             type: str
             required: true
-            description: 'IPv6 address for DNS server'
+            description: IPv6 address of DNS server.
         tftp_server:
           type: dict
           keys:
